# qcue

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT_HISTORY.md  NOTICE  README.md  README.zh-CN.md  SECURITY.md  THIRD_PARTY_NOTICES.flutter-engine.txt  THIRD_PARTY_NOTICES.md  TRADEMARKS.md
qcue-rs/: .gitignore  Cargo.toml  about.hbs  about.toml  deny.toml
qcue-rs/.cargo/: audit.toml  config.toml
qcue-rs/app-server/: Cargo.toml  build.rs
qcue-rs/app-server-protocol/: Cargo.toml
qcue-rs/app-server-protocol/src/: envelope.rs  items.rs  lib.rs  v1.rs  v2.rs
qcue-rs/app-server-protocol/tests/: capture_wire.rs  schema_export.rs
qcue-rs/app-server/src/: config.rs  db.rs  error.rs  health.rs  legal.rs  lib.rs  main.rs  middleware.rs  objstore.rs  recall.rs  recall_tools.rs  redact.rs  release.rs  router.rs  state.rs  web_tool.rs  wellknown.rs
qcue-rs/app-server/src/account/: mod.rs  routes.rs
qcue-rs/app-server/src/activity/: mod.rs  routes.rs
qcue-rs/app-server/src/auth/: audit.rs  jwt.rs  magic.rs  mod.rs  password.rs  routes.rs  social.rs
qcue-rs/app-server/src/capture/: mod.rs  routes.rs
qcue-rs/app-server/src/conversations/: mod.rs  routes.rs
qcue-rs/app-server/src/dispatch/: mod.rs  price.rs  resolver.rs
qcue-rs/app-server/src/dream/: mod.rs  routes.rs  scheduler.rs
qcue-rs/app-server/src/ingest/: mod.rs  router_llm.rs  routes.rs
qcue-rs/app-server/src/jobs/: mod.rs  queue.rs  routes.rs  spawn.rs  worker.rs
qcue-rs/app-server/src/settings/: mod.rs  routes.rs
qcue-rs/app-server/src/sync/: emit.rs  materialize.rs  (+2 more)
qcue-rs/app-server/tests/: account_deletion.rs  activity.rs  agentic_recall.rs  auth.rs  capture_crud.rs  capture_feed.rs  capture_idempotency.rs  conversations_api.rs  cost_accrual.rs  dispatch_resolver.rs  dispatch_route.rs  dream_cron.rs  dream_e2e.rs  global.rs  ingest_e2e.rs  ingest_pool.rs  ingest_run.rs  jobs.rs  json_charset.rs  live_tool_calling.rs  migration_guard.rs  migrations_check.rs  privacy_route.rs  settings_models_dream.rs  settings_stt_provider.rs  sse_reconnect.rs  stt_selection.rs  sync.rs  transcribe_route.rs  vault.rs  version_endpoint.rs  wiki_read.rs  wire.rs  ws_e2e.rs
qcue-rs/codegen/: models.dart  schema.v1.json
qcue-rs/ffi/: Cargo.toml  README.md
qcue-rs/ffi/src/: bridge.rs  lib.rs
qcue-rs/ffi/tests/: ffi.rs
qcue-rs/http/: Cargo.toml
qcue-rs/http/src/: client.rs  lib.rs  retry.rs  sse.rs  ssrf.rs
qcue-rs/http/tests/: client.rs  retry.rs  sse.rs
qcue-rs/ideas/: Cargo.toml
qcue-rs/ideas/src/: capture.rs  fence.rs  lib.rs
qcue-rs/ideas/tests/: capture.rs  dream_agent.rs  dream_dev_gate.rs  dream_rls_isolation.rs  dream_scheduler.rs  dream_search_model_driven.rs  recall_search.rs  recall_systems.rs
qcue-rs/llm-api/: Cargo.toml
qcue-rs/llm-api/src/: anthropic_sse.rs  chat_sse.rs  lib.rs  responses_sse.rs  scrub.rs  usage_norm.rs  watchdog.rs
qcue-rs/llm-api/tests/: anthropic_sse.rs  chat_sse.rs  usage_norm.rs  watchdog.rs
qcue-rs/migrations/: 00000_M0_0000_prelude.sql  00001_M0_0001_tenants.sql  00002_M0_0002_users.sql  00003_M0_0003_provider_credentials.sql  00004_M0_0004_auth_bootstrap.sql  10001_M1_0001_messages.sql  10002_M1_0002_session_kv.sql  10003_M1_0003_conversations.sql  20001_M2_0001_cost_ledger.sql  20002_M2_0002_jobs.sql  20003_M2_0003_ideas.sql  20004_M2_0004_approvals_audit.sql  20005_M2_0005_ideas_last_ingested.sql  20006_M2_0006_ideas_location.sql  30001_M3_0001_wiki_pages.sql  30002_M3_0002_wiki_links.sql  30003_M3_0003_wiki_aux.sql  30004_M3_0004_wiki_consolidation.sql  50001_M5_0001_sync_ops.sql  50002_M5_0002_capture_idempotency.sql  60001_M6_0001_sync_materialize.sql
qcue-rs/protocol/: Cargo.toml
qcue-rs/protocol/src/: api_mode.rs  appendix_a.rs  cred.rs  envelope.rs  error.rs  ids.rs  lib.rs  message.rs  observe.rs  response.rs  stream.rs  sync.rs  transcription.rs  usage.rs
qcue-rs/protocol/tests/: deny_unknown.rs  types.rs
qcue-rs/providers/: Cargo.toml
qcue-rs/providers/src/: health.rs  hooks.rs  lib.rs  profile.rs  quirks.rs  registry.rs  resolve.rs
qcue-rs/providers/tests/: profile.rs  quirks.rs  registry.rs
qcue-rs/router/: Cargo.toml
qcue-rs/router/src/: classify.rs  compress.rs  dispatch.rs  dispatch_http.rs  lib.rs  pool.rs  prompt_cache.rs  resolver.rs  retry_loop.rs  sanitize.rs  scrub.rs  structured.rs  stt.rs  stt_chat_audio.rs  stt_minimax.rs  stt_openai.rs  stt_vendors.rs  stub.rs  tools.rs  transport.rs  transport_anthropic.rs  transport_chat.rs  transport_responses.rs  turn.rs
qcue-rs/router/tests/: classify.rs  compress.rs  deepseek_wire.rs  dispatch_http.rs  pool.rs  prompt_cache.rs  retry_loop.rs  structured.rs  stt.rs  stt_chat_audio.rs  stt_minimax.rs  stt_openai.rs  stt_vendors.rs  stub.rs  transport.rs  turn.rs  turn_budget_finalize.rs
qcue-rs/secrets/: Cargo.toml
qcue-rs/secrets/src/: lib.rs  redact.rs
qcue-rs/secrets/tests/: secrets.rs
qcue-rs/store/: Cargo.toml
qcue-rs/store/src/: cache_hash.rs  cooldown.rs  cost_repo.rs  creds_repo.rs  ideas_repo.rs  lib.rs  messages_repo.rs  search_repo.rs  wiki_repo.rs
qcue-rs/store/tests/: cost_repo.rs  dirty_scan.rs  ideas_location.rs  repos.rs
qcue-rs/utils/fence/: Cargo.toml
qcue-rs/utils/frontmatter/: Cargo.toml
qcue-rs/utils/linksan/: Cargo.toml
qcue-rs/utils/search-route/: Cargo.toml
qcue-rs/utils/slugify/: Cargo.toml
qcue-rs/wiki/: Cargo.toml
qcue-rs/wiki/src/: approvals.rs  clean_markdown.rs  conflict.rs  cost.rs  file_back.rs  index_gen.rs  ingest.rs  json_hardening.rs  lib.rs  llm.rs  page.rs  page_factory.rs  path_guard.rs  query.rs  related.rs  sandbox.rs  types.rs  write_gate.rs
qcue-rs/wiki/tests/: analyzer.rs  consolidation_prompt.rs  cost_guard.rs  digest_reingest.rs  dream_lock.rs  dream_lock_reclaim.rs  index_gen.rs  ingest.rs  lint_scanners.rs  no_pgvector.rs  no_provider_imports.rs  page_factory.rs  query.rs  quota.rs  repo_tenant_scope.rs  sandbox_escape.rs  single_write_site.rs  write_gate.rs
qcue-rs/xtask/: Cargo.toml
qcue-rs/xtask/src/: lints.rs  main.rs
qcue-rs/xtask/tests/: layering.rs  toolchain.rs
(+413 files in other folders)
