[workspace]
resolver = "2"
members = ["protocol", "xtask", "http", "llm-api", "providers", "secrets", "store", "router", "ffi", "app-server-protocol", "app-server", "utils/slugify", "utils/frontmatter", "utils/linksan", "utils/fence", "utils/search-route", "wiki", "ideas"]

[workspace.package]
edition = "2024"
rust-version = "1.88"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v7", "v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
ts-rs = { version = "10", features = ["uuid-impl", "serde-json-impl", "chrono-impl"] }
schemars = { version = "0.8", features = ["uuid1", "chrono"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json", "http2", "multipart"] }
base64 = "0.22"
futures-util = "0.3"
async-stream = "0.3"
async-trait = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }
redis = { version = "0.27", features = ["tokio-comp"] }
tracing = "0.1"
zeroize = { version = "1", features = ["derive"] }
aes-gcm = "0.10"
anyhow = "1"
axum = { version = "0.8", features = ["macros", "ws"] }
tower = { version = "0.5", features = ["limit", "buffer", "util"] }
tower-http = { version = "0.6", features = ["set-header", "cors", "limit", "trace"] }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = { version = "0.1", features = ["sync"] }
argon2 = "0.5"
jsonwebtoken = "9"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
redundant_clone = "deny"

[workspace.lints.rust]
unused_must_use = "deny"
