[package]
name = "app-server-protocol"
edition.workspace = true
rust-version.workspace = true
version = "0.1.0"

[[bin]]
name = "export-schema"
path = "src/bin/export_schema.rs"

[dependencies]
# Canonical single-definition wire types (RuntimeEventEnvelope, WikiEditOp, DreamPhase) live in `protocol` (Master §8); IMPORT them.
protocol = { path = "../protocol" }
serde.workspace = true
serde_json.workspace = true
ts-rs.workspace = true
schemars.workspace = true
uuid.workspace = true
chrono.workspace = true

[lints]
workspace = true
