[package]
name = "http"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
protocol = { path = "../protocol" }
reqwest.workspace = true
tokio.workspace = true
futures-util.workspace = true
async-stream.workspace = true
serde_json.workspace = true
uuid.workspace = true
bytes = "1"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "net", "io-util"] }
bytes = "1"

[lints]
workspace = true
