[package]
name = "llm-api"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
protocol = { path = "../protocol" }
http = { path = "../http" }
serde.workspace = true
serde_json.workspace = true
futures-util.workspace = true
async-stream.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }

[lints]
workspace = true
