[package]
name = "protocol"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
ts-rs.workspace = true
schemars.workspace = true
futures-core = "0.3"

[lints]
workspace = true
