[package]
name = "router"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
protocol = { path = "../protocol" }
providers = { path = "../providers" }
llm-api = { path = "../llm-api" }
http = { path = "../http" }
secrets = { path = "../secrets" }
store = { path = "../store" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
tokio.workspace = true
futures-util.workspace = true
async-stream.workspace = true
async-trait.workspace = true
tracing.workspace = true
reqwest.workspace = true
zeroize.workspace = true
tokio-util = { version = "0.7", features = ["rt"] }
httpdate = "1"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
uuid = { workspace = true }
wiremock = "0.6"

[lints]
workspace = true
