[package]
name = "secrets"
publish = false  # app-internal crate, never published
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
protocol = { path = "../protocol" }
aes-gcm.workspace = true
zeroize.workspace = true
thiserror.workspace = true

[lints]
workspace = true
