[package]
name = "xtask"
publish = false  # app-internal crate, never published
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
name = "xtask"
path = "src/lib.rs"

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
serde.workspace = true

[lints]
workspace = true
